Set bash as default shell for all new users

--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -24,6 +24,7 @@
   - name: create a new user
     user:
       name="{{ item.username }}"
+      shell="/bin/bash"
       state=present
       groups="wheel"
       append=yes
